feat: get auth status to check token validity
